<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:id="@+id/firstRow"
    android:layout_above="@id/firstRow"
    android:padding="5dp">
    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/lifestory_textView"
        android:text="@string/lifeText"
        android:layout_weight="8"/>

    <Spinner
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:id="@+id/lifestory_spinner"
        android:layout_weight="4"
        android:prompt="@string/color_prompt"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lifestory_switch"
        android:layout_weight="2" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/secondRow"
        android:layout_below="@id/firstRow"
        android:padding="5dp">

        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/familyTree_textView"
            android:text="@string/familyText"
            android:layout_weight="8"/>

        <Spinner
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:id="@+id/familyTree_spinner"
            android:layout_weight="4"
            android:prompt="@string/color_prompt"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/familyTree_switch"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/thirdRow"
        android:layout_below="@id/secondRow"
        android:padding="5dp">
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/spouse_textView"
            android:text="@string/spouseText"
            android:layout_weight="8"/>

        <Spinner
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:id="@+id/spouse_spinner"
            android:layout_weight="4"
            android:prompt="@string/color_prompt"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spouse_switch"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/fourthRow"
        android:layout_below="@id/thirdRow"
        android:padding="5dp">
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/mapType_textView"
            android:text="@string/maptypeText"
            android:layout_weight="8"/>

        <Spinner
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:id="@+id/mapType_spinner"
            android:layout_weight="4"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/fifthRow"
        android:layout_below="@id/fourthRow"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/resync_textView"
            android:text="@string/rsycnText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/sixthRow"
        android:layout_below="@id/fifthRow"
        android:padding="5dp">
        <TextView
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logout_textview"
            android:layout_gravity="start"/>
    </LinearLayout>

</RelativeLayout>